# JIscRAper

./: Cargo.toml  Dockerfile  README.md
config/: config.toml
dumps/: tmp_issues.txt
src/: config.rs  innovation.rs  main.rs
